<resources>
    <string name="app_name">Evdaş Bul</string>

    <string name="prompt_email_address">isminiz@std.yildiz.edu.tr</string>
    <string name="prompt_password">●●●●●●●●</string>
    <string name="prompt_full_name">İsim ve Soyisim</string>
    <string name="prompt_phone_number">Telefon Numarası</string>
    <string name="prompt_department">Bölüm</string>
    <string name="prompt_grade">Sınıf</string>
    <string name="prompt_have_an_account">Bir hesabınız var mı?</string>
    <string name="prompt_send_confirmation_email">Doğrulama maili gönderildi.</string>
    <string name="prompt_filter">Filtrele</string>
    <string name="prompt_range_in_kilometers">Kampüse Uzaklık</string>
    <string name="prompt_will_stay_for_days">Kalınacak Gün Sayısı</string>
    <string name="prompt_filter_settings">Filtreleme Seçenekleri</string>
    <string name="prompt_filter_by">Filtrele</string>
    <string name="prompt_sort_by">Sırala</string>
    <string name="prompt_list_view">Liste Görünümü</string>
    <string name="prompt_map_view">Harita Görünümü</string>
    <string name="prompt_request_waiting">Yanıtınız Bekleniyor</string>
    <string name="prompt_request_sent">İstek Gönderildi</string>
    <string name="prompt_request_done">Sonuçlandı</string>

    <string name="button_login">Giriş Yap</string>
    <string name="button_signup">Kayıt Ol</string>
    <string name="button_forgot_password">Şifremi Unuttum</string>
    <string name="button_take_picture">Fotoğraf Çek</string>
    <string name="button_upload_picture">Fotoğraf Yükle</string>
    <string name="button_send_confirmation">Doğrula</string>
    <string name="button_go_back">Geri Dön</string>
    <string name="button_update_picture">Fotoğrafı Güncelle</string>
    <string name="button_update_information">Bilgileri Güncelle</string>
    <string name="button_update_email_address">Adresi Güncelle</string>
    <string name="button_update_password">Parolayı Güncelle</string>
    <string name="button_logout">Çıkış Yap</string>
    <string name="button_send_match_request">Eşleşme Talebi Gönder</string>
    <string name="button_send_email">Email Gönder</string>
    <string name="button_send_message">Mesaj Gönder</string>
    <string name="button_text_with_whatsapp">Whatsapp ile Ulaş</string>
    <string name="button_apply_filter">Uygula</string>
    <string name="button_accept_match_request">Kabul Et</string>
    <string name="button_deny_match_request">Reddet</string>

    <string name="description_profile_picture">Profil Fotoğrafı</string>
    <string name="description_menu">Menü</string>
    <string name="description_full_name">İsminiz ve Soyisminiz</string>
    <string name="description_phone_number">Telefon Numaranız</string>
    <string name="description_department">Bölümünüz</string>
    <string name="description_your_grade">Sınıfınız</string>
    <string name="description_distance">Kampüse Uzaklık (km)</string>
    <string name="description_stay_for">Kalacağınız Gün Sayısı</string>
    <string name="description_looking_for">Geçerli Arama Durumunuz</string>
    <string name="description_current_password">Geçerli Parolanız</string>
    <string name="description_new_password">Yeni Parolanız</string>
    <string name="description_sort_by">Sıralama Türü</string>

    <string name="title_profile_page">Profil</string>
    <string name="title_main_page">Ana Sayfa</string>
    <string name="title_section_profile_picture">Profil Fotoğrafınız</string>
    <string name="title_section_profile_information">Bilgileriniz</string>
    <string name="title_section_email_address">Email Adresiniz</string>
    <string name="title_section_password">Parolanız</string>
    <string name="title_requests_page">İstekler</string>

    <string name="message_permission_camera_required">Bu işlem için kamera izni gereklidir.</string>
    <string name="message_permission_gallery_required">Bu işlem için galeriye erişim izni gereklidir.</string>
    <string name="message_no_app_supporting">Bu işlemi destekleyen hiçbir uygulama bulunamadı.</string>
    <string name="message_confirmation_main_sent">Doğrulama maili gönderildi.</string>
    <string name="message_profile_picture_updated">Profil fotoğrafı başarıyla güncellendi.</string>
    <string name="message_signed_out">Başarıyla çıkış yapıldı.</string>
    <string name="message_profile_information_updated">Profil bilgileri başarıyla güncellendi.</string>
    <string name="message_email_address_updated">Email adresi başarıyla güncellendi.</string>
    <string name="message_password_updated">Parola başarıyla güncellendi.</string>
    <string name="message_verify_email_address">Lütfen email adresinizi doğrulayın.</string>
    <string name="message_login_again">Lütfen tekrar giriş yapınız.</string>
    <string name="message_filter_not_active">Filtreleme işlemi şuan desteklenmiyor.</string>
    <string name="message_only_users_looking_for_send_request">Sadece "kalacak ev/oda arayan kullanıcılar" ile "ev/oda arkadaşı arayan kullanıcılar" birbirine eşleşme isteği gönderebilir. Profilden durumunuzu değiştirebilirsiniz.</string>
    <string name="message_sent_request">İstek gönderildi.</string>
    <string name="message_whatsapp_not_installed">Bu işlem için Whatsapp yüklü olmalıdır.</string>

    <string name="display_grade">%1$d. Sınıf</string>
    <string name="display_range_in_kilometers">%1$.1f km</string>
    <string name="display_will_stay_for_days">%1$d gün</string>

    <string name="filter_users_by_range">Kampüse Uzaklık (en fazla)</string>
    <string name="filter_users_by_stay">Konaklama Süresi (en fazla)</string>
    <string name="filter_users_by_status">Ev/Oda Arama Durumu</string>

    <string-array name="status_types">
        <item>Hepsi</item>
        <item>Aramıyor</item>
        <item>Kalacak Ev/Oda Arıyor</item>
        <item>Ev/Oda Arkadaşı Arıyor</item>
    </string-array>

    <string-array name="sort_users_by">
        <item>Sırala</item>
        <item>Kampüse Uzaklık (Artan)</item>
        <item>Kampüse Uzaklık (Azalan)</item>
        <item>Konaklama Süresi (Artan)</item>
        <item>Konaklama Süresi (Azalan)</item>
    </string-array>
</resources>