<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignupActivity">

    <include layout="@layout/layout_header" />

    <ScrollView
        android:id="@+id/signupView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="32dp"
            android:paddingBottom="32dp">

            <EditText
                android:id="@+id/textSignupFullName"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:autofillHints="username"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/prompt_full_name"
                android:inputType="textPersonName"
                android:paddingStart="16dp"
                android:paddingEnd="12dp" />

            <EditText
                android:id="@+id/textSignupEmailAddress"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:autofillHints="username"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/prompt_email_address"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="12dp" />

            <EditText
                android:id="@+id/textSignupPassword"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:autofillHints="password"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:labelFor="@+id/textViewPassword"
                android:paddingStart="16dp"
                android:paddingEnd="12dp" />

            <EditText
                android:id="@+id/textSignupPhoneNumber"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:autofillHints="date"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/prompt_phone_number"
                android:inputType="phone"
                android:labelFor="@+id/textViewRegistrationYear"
                android:paddingStart="16dp"
                android:paddingEnd="12dp" />

            <EditText
                android:id="@+id/textSignupDepartment"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:autofillHints="date"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_building"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/prompt_department"
                android:inputType="text"
                android:labelFor="@+id/textViewGraduationYear"
                android:paddingStart="16dp"
                android:paddingEnd="12dp" />

            <EditText
                android:id="@+id/textSignupGrade"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_marginBottom="32dp"
                android:autofillHints="date"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_grade"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/prompt_grade"
                android:inputType="numberSigned"
                android:labelFor="@+id/textViewGraduationYear"
                android:paddingStart="16dp"
                android:paddingEnd="12dp" />

            <LinearLayout
                android:id="@+id/signupCameraLayout"
                android:layout_width="320dp"
                android:layout_height="64dp"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageSignupAvatar"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginEnd="12dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/description_profile_picture"
                    android:padding="4dp"
                    android:src="@drawable/ic_person" />

                <Button
                    android:id="@+id/buttonSignupTakePicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/custom_button_secondary"
                    android:gravity="center"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:text="@string/button_take_picture"
                    android:textAllCaps="false"
                    android:textColor="@color/text" />

                <Button
                    android:id="@+id/buttonSignupUploadPicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button_secondary"
                    android:gravity="center"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:text="@string/button_upload_picture"
                    android:textAllCaps="false"
                    android:textColor="@color/text" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonSignup"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/custom_button"
                android:gravity="center"
                android:text="@string/button_signup"
                android:textAllCaps="true"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textViewLoginPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_have_an_account" />

            <TextView
                android:id="@+id/textViewLoginButton"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/button_login"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>