<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".UserFilterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/prompt_filter_by"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/textUserFilterRange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/filter_users_by_range"
                android:textAlignment="center"
                android:textColor="@color/text" />

            <SeekBar
                android:id="@+id/seekBarUserFilterRange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/textUserFilterStay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/filter_users_by_stay"
                android:textAlignment="center"
                android:textColor="@color/text" />

            <SeekBar
                android:id="@+id/seekBarUserFilterStay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/textUserFilterStatusType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/filter_users_by_status"
                android:textAlignment="center"
                android:textColor="@color/text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="12dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/description_looking_for"
                    android:src="@drawable/ic_filter" />

                <Spinner
                    android:id="@+id/spinnerFilterStatusType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:spinnerMode="dialog" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/prompt_sort_by"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/description_sort_by"
                android:src="@drawable/ic_sort" />

            <Spinner
                android:id="@+id/spinnerSortingType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:spinnerMode="dialog" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonApplyFilter"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="@string/button_apply_filter"
        android:textAllCaps="true"
        android:textColor="@color/white" />

</LinearLayout>