<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ForgotPasswordActivity">

    <EditText
        android:id="@+id/textForgotPasswordEmailAddress"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:autofillHints="username"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/prompt_email_address"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="12dp"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/buttonSendConfirmationEmail"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:gravity="center"
        android:text="@string/button_send_confirmation"
        android:textAllCaps="true"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/buttonGoBack"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/custom_button_secondary"
        android:text="@string/button_go_back"
        android:textAllCaps="false"
        android:textColor="@color/text" />

</LinearLayout>