<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <include layout="@layout/layout_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textMenuProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:padding="32dp"
                android:text="@string/title_profile_page"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_person_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/menuProfileLayout" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textMenuMainPage" />

            <TextView
                android:id="@+id/textMenuMainPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:padding="32dp"
                android:text="@string/title_main_page"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_house_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/menuProfileLayout" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textMenuMainPage" />

            <TextView
                android:id="@+id/textMenuLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:padding="32dp"
                android:text="@string/button_logout"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_logout_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/menuProfileLayout" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textMenuMainPage" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>